Use formatted again. Bit more readable.
Signed-off-by: Roy Golan <rgolan@redhat.com>