@@ -95,7 +95,7 @@ public class GetAnalysisTask extends BaseInfrastructureWorkFlowTask {
 		else if (result instanceof Result.Success<TaskGroup> success) {
 			if ("Ready".equals(success.value().state()) && success.value().tasks() != null
 					&& "Succeeded".equals(success.value().tasks()[0].state())) {
-				String reportURL = String.format("%s/hub/applications/%d/bucket/%s", serverUrl,
+				String reportURL = "%s/hub/applications/%d/bucket/%s".formatted(serverUrl,
 						success.value().tasks()[0].application().id(), success.value().data().output());
 				addParameter("reportURL", reportURL);
 				notificationSender.send("Migration Analysis Report Completed",
